--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 aiofiles==0.4.0
+aiohttp==3.6.2
+async-generator==1.10
+async-timeout==3.0.1
+attrs==19.3.0
 cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
@@ -9,16 +13,28 @@ httpcore==0.3.0
 httptools==0.0.13
 hyperframe==5.2.0
 idna==2.8
+importlib-metadata==0.23
+more-itertools==7.2.0
 motor==2.0.0
 multidict==4.6.1
+packaging==19.2
+pluggy==0.13.1
+py==1.8.0
 pymongo==3.9.0
+pyparsing==2.4.5
+pytest==5.3.0
+pytest-sanic==1.1.2
 python-dotenv==0.10.3
 requests==2.22.0
 requests-async==0.5.0
 rfc3986==1.3.2
 sanic==19.9.0
+six==1.13.0
 tornado==6.0.3
 ujson==1.35
 urllib3==1.25.7
 uvloop==0.14.0
+wcwidth==0.1.7
 websockets==8.1
+yarl==1.3.0
+zipp==0.6.0
